--- a/library-api/src/main/resources/application.properties
+++ b/library-api/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.mail.password=b4b56d582565bc
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# incluir todos os endpoints no actuator
+management.endpoints.web.exposure.include=*
+
+# configurar arquivo de log
+logging.file.name=appfile.log
+
+# configurar aplicação client
+spring.boot.admin.client.url=http://localhost:8081
