--- a/library-api/pom.xml
+++ b/library-api/pom.xml
@@ -15,12 +15,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>library-api</name>
 	<description>Projeto de controle de aluguel de livros</description>
+	<packaging>jar</packaging>
+	<!-- <packaging>war</packaging>  -->
 
 	<properties>
 		<java.version>8</java.version>
 	</properties>
 
 	<dependencies>
+		<!-- 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency>
+		 -->
+		 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
